# EminentFeedSystem

./: .gitignore  CMakeLists.txt  README.md  build_and_test.sh  count_code_stats.sh  run_main.sh  run_stability_test.sh
.github/workflows/: ci.yml
CodingModule/include/: CodingModule.hpp
CodingModule/src/: CodingModule.cpp
Coding_Module/include/: CodingModule.hpp
Coding_Module/src/: CodingModule.cpp
Crypto_Module/include/: ChaCha20CryptoModule.hpp  ICryptoModule.hpp  NullCryptoModule.hpp
Crypto_Module/src/: ChaCha20CryptoModule.cpp
Crypto_Module/tests/: test_crypto.cpp
Physical_Layer/include/: AbstractPhysicalLayer.hpp  PhysicalLayer.hpp  PhysicalLayerEsp32Wifi.hpp  PhysicalLayerInMemory.hpp  PhysicalLayerUdp.hpp
Physical_Layer/src/: AbstractPhysicalLayer.cpp  PhysicalLayer.cpp  PhysicalLayerEsp32Wifi.cpp  PhysicalLayerInMemory.cpp  PhysicalLayerUdp.cpp
Physical_Layer/tests/: test_physical_layer.cpp
Sdk/include/: EminentSdk.hpp
Sdk/src/: EminentSdk.cpp
Sdk/tests/: test_sdk.cpp
Session_Manager/include/: SessionManager.hpp
Session_Manager/src/: SessionManager.cpp
Session_Manager/tests/: test_session_manager.cpp
Transport_Layer/include/: TransportLayer.hpp
Transport_Layer/src/: TransportLayer.cpp
Transport_Layer/tests/: test_transport_layer.cpp
Validation_Module/include/: ValidationConfig.hpp
Validation_Module/src/: ValidationConfig.cpp
app/: main.cpp  test_stabilnosci_2_synchroniczny.cpp
common/: ThreadSafeQueue.hpp  commonTypes.hpp  common_types.hpp  logging.cpp  logging.hpp
docs/: ARCHITECTURE.md  TICKET_INTEGRACJA.md
esp_idf_component/: CMakeLists.txt  README.md
examples/esp32_gyro_motor/: CMakeLists.txt
examples/esp32_gyro_motor/main/: CMakeLists.txt  main.cpp
examples/mac_console/: main.cpp
physical_layer/include/: physical_layer.hpp
physical_layer/src/: physical_layer.cpp
physical_layer/tests/: test_physical_layer.cpp
sdk/include/: eminent_sdk.hpp
sdk/src/: eminent_sdk.cpp
sdk/tests/: test_sdk.cpp
session_manager/include/: session_manager.hpp
session_manager/src/: session_manager.cpp
session_manager/tests/: test_session_manager.cpp
tests/integration/: test_sdk_disconnect.cpp  test_sdk_encryption_e2e.cpp  test_sdk_handshake.cpp  test_sdk_heartbeat.cpp  test_sdk_retransmission.cpp
transport_layer/include/: transport_layer.hpp
transport_layer/src/: transport_layer.cpp
transport_layer/tests/: test_transport_layer.cpp
